[gd_scene load_steps=13 format=3 uid="uid://c8niqa1f6n7nm"]

[ext_resource type="Script" path="res://Scenes/scripts/game.gd" id="1_voqei"]
[ext_resource type="Texture2D" uid="uid://ct2h2ci7w6g6r" path="res://Scenes/graphics/background.png" id="2_ktthm"]
[ext_resource type="PackedScene" uid="uid://jgrafybcaijh" path="res://Scenes/wall.tscn" id="2_xuxvo"]
[ext_resource type="FontFile" uid="uid://b8dlgvgbqibm1" path="res://Scenes/kenvector_future.ttf" id="3_okxcf"]
[ext_resource type="PackedScene" uid="uid://k7ysxrpmslxq" path="res://Scenes/roof.tscn" id="3_sy1y6"]
[ext_resource type="PackedScene" uid="uid://dfb664kkr8tt1" path="res://Scenes/ball.tscn" id="4_1i1kq"]
[ext_resource type="Theme" uid="uid://x2rhaw745sol" path="res://Scenes/font_theme_thin.tres" id="4_3ijsk"]
[ext_resource type="AudioStream" uid="uid://vo4borfylcnf" path="res://Scenes/sounds/music_zapsplat_game_music_action_fast_paced_elelctro_sonic_011.mp3" id="7_p377h"]

[sub_resource type="Gradient" id="Gradient_63jpo"]
offsets = PackedFloat32Array(0, 0.185393, 0.516854, 0.814607, 1)
colors = PackedColorArray(0.870588, 0.776471, 0, 1, 1, 0.729412, 0.121569, 1, 0.739789, 1.93726e-06, 9.62615e-07, 1, 0, 0, 0, 0.839216, 1, 1, 1, 0)

[sub_resource type="Theme" id="Theme_485ve"]
Label/font_sizes/font_size = 64
Label/fonts/font = ExtResource("3_okxcf")

[sub_resource type="Theme" id="Theme_631ai"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("3_okxcf")

[sub_resource type="Theme" id="Theme_mfqau"]
Button/font_sizes/font_size = 48
Button/fonts/font = ExtResource("3_okxcf")

[node name="Game" type="Node2D"]
script = ExtResource("1_voqei")

[node name="Background" type="TextureRect" parent="."]
offset_left = -73.0
offset_top = -64.0
offset_right = 888.0
offset_bottom = 640.0
texture = ExtResource("2_ktthm")

[node name="FX_Highscore" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(173, 591)
amount = 64
lifetime = 0.2
speed_scale = 0.4
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(48, 1)
gravity = Vector2(0, -980)
scale_amount_min = 3.0
scale_amount_max = 5.0
color = Color(1, 0.258824, 0, 1)
color_ramp = SubResource("Gradient_63jpo")

[node name="BonusText" type="Label" parent="."]
modulate = Color(1, 0.572549, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 208.0
offset_top = 388.0
offset_right = 608.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_485ve")
text = "welcome"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 784.0
offset_bottom = 600.0

[node name="_BUGS" type="Label" parent="Control"]
layout_mode = 0
offset_left = -4.0
offset_top = 456.0
offset_right = 350.0
offset_bottom = 505.0
text = "- Beim Neustart wird Logo nicht ausgeblendet
- Bombe arbeitet nicht korrekt
- Panel drehen unvollst√§ndig"

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 10.5
offset_right = 160.0
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_631ai")
text = "START"

[node name="Balls" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -26.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_3ijsk")
text = "BALLS"

[node name="Score" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 40.0
grow_vertical = 0
theme = ExtResource("4_3ijsk")
text = "SCORE"

[node name="Level" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -25.0
offset_right = -33.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_3ijsk")
text = "LEVEL"

[node name="Bricks" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_3ijsk")
text = "BRICKS"

[node name="Ballspeed" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 177.5
offset_top = -25.0
offset_right = 264.5
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_3ijsk")
text = "BALLSPEED"

[node name="FPS" type="Label" parent="Control"]
visible = false
modulate = Color(0.6, 0.6, 0.6, 0.588235)
layout_mode = 1
offset_left = -12.0
offset_top = -6.0
offset_right = 28.0
offset_bottom = 17.0
theme = ExtResource("4_3ijsk")
text = "FPS"

[node name="Highscore" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 112.0
offset_top = 550.0
offset_right = 180.0
offset_bottom = 573.0
theme = ExtResource("4_3ijsk")
text = "HIGHSCORE"

[node name="Unpause" type="Button" parent="Control"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = -16.0
offset_top = -8.0
offset_right = 784.0
offset_bottom = 592.0
theme = SubResource("Theme_mfqau")
text = "UNPAUSE"

[node name="BGMusicSlider" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -440.0
offset_top = 368.0
offset_right = -312.0
offset_bottom = 384.0
grow_horizontal = 0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Wall_Left" parent="." instance=ExtResource("2_xuxvo")]
position = Vector2(-8, 400)

[node name="Wall_Right" parent="." instance=ExtResource("2_xuxvo")]
position = Vector2(808, 400)

[node name="Roof" parent="." instance=ExtResource("3_sy1y6")]

[node name="Floor" parent="." instance=ExtResource("3_sy1y6")]
position = Vector2(0, 520)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer_FPS" type="Timer" parent="."]
autostart = true

[node name="Timer_Highscore" type="Timer" parent="."]
wait_time = 20.0

[node name="Ball" parent="." instance=ExtResource("4_1i1kq")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p377h")
autoplay = true

[node name="DebugUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 595.0
offset_top = 192.0
offset_right = 795.0
offset_bottom = 392.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Guns" type="Button" parent="DebugUI/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Player Guns	"

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="value_changed" from="Control/BGMusicSlider" to="." method="_on_bg_music_slider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_FPS" to="." method="_on_timer_fps_timeout"]
[connection signal="timeout" from="Timer_Highscore" to="." method="_on_timer_highscore_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="toggled" from="DebugUI/VBoxContainer/Guns" to="." method="_on_guns_toggled"]
